add fuel cost calculator, change some styles and reorg

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-900 text-slate-100;
+	@apply bg-primary-900 text-slate-100;
 
-  -webkit-font-smoothing: antialiased;
-  -webkit-tap-highlight-color: transparent;
+	-webkit-font-smoothing: antialiased;
+	-webkit-tap-highlight-color: transparent;
 }
 
 @layer components {
-  .focus {
-    @apply outline-none focus-visible:ring-2 focus-visible:ring-blue-500;
-  }
+	.focus {
+		@apply outline-none focus-visible:ring-2 focus-visible:ring-blue-500;
+	}
 }
